--- a/index.html
+++ b/index.html
@@ -29,21 +29,30 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul id="navigation" class="nav navbar-nav navbar-right text-center">
-						<li><a href="#whatwedo">What I Do</a></li>
+						<li><a href="#download">Download</a></li>
 						<li><a href="#manifesto">About</a></li>
-						<li><a href="#skills">Skills</a></li>
-						<li><a href="#works">Works</a></li>
-						<li><a href="#team">Team</a></li>
-						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
-		<section id="myhead" class="light-typo color-bg padding-top myhead">
+
+
+		<section id="myhead" class="light-typo color-bg padding-top image-bg">
 			<div class="container">
-				<div class="row">
+				<div class="row hidden-xs">
 					<div class="col-sm-6 text-col">
-						<h1>Something great<br>about the app<br>goes here</h1> 
+						<h1 class="sliderhead"><strong>One</strong> App to <br>rule them all.</h1> 
+					</div>
+					<div class="col-sm-6 col-md-6">
+						<div class="text-center">
+							<img class="img-responsive img-center" src="img/phone.png" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="row visible-xs">
+					<div class="col-sm-6 text-col">
+						<h4 class="sliderhead">
+							<strong>One</strong> App to <br>rule them all.</h4>
 					</div>
 					<div class="col-sm-6 col-md-6">
 						<div class="text-center">
@@ -54,9 +63,9 @@
 			</div>
 		</section>
 
-		<section class="color-bg padding-top-bottom light-typo">
+		<section id="download" class="color-bg padding-top-bottom light-typo">
 			<div class="container">
-				<div class="row">
+				<div class="row hidden-xs">
 					<div class="col-xs-12 col-sm-12 col-md-6 downloadtext">
 						<p>DOWNLOAD THE APP TODAY</p>
 					</div>
@@ -65,11 +74,20 @@
 						<a href="www.apple.com"><img src="img/googleplaybtn.png"></a>
 					</div>
 				</div>
+			<div class="row visible-xs">
+					<div class="col-xs-12 col-sm-12 col-md-6" align="center">
+						<p>DOWNLOAD THE APP TODAY</p>
+					</div>
+					<div class="col-xs-12 col-sm-12 col-md-6" align="center">
+						<a href="www.apple.com"><img src="img/appstore_btn.png"</a>
+						<a href="www.apple.com"><img src="img/googleplaybtn.png"></a>
+					</div>
+				</div>
 			</div>
 		</section>
 		
 		
-		<section id="testimonial" class="padding-top-bottom image-bg light-typo">
+		<section id="testimonial" class="padding-top-bottom image-bg2 light-typo">
 			<div class="container">
 				<div class="bs-example">
 					<div id="carousel-example-generic" class="carousel slide bs-docs-carousel-example">
